--- a/src/form-validator/tests/manual/basicExample.html
+++ b/src/form-validator/tests/manual/basicExample.html
@@ -33,6 +33,7 @@
                         },
                         age:{
                             validation:{
+                                optional:true,
                                 type:'integer',
                                 max:100,
                                 min:3
@@ -57,10 +58,7 @@
                                         }
                                     }
                                 ],
-                                valid:{
-                                    el:'ageCorrect',
-                                    events:'valid'
-                                }
+                                valid:{el:'ageCorrect'}
                             }
                         },
                         income:{
@@ -106,6 +104,15 @@
                                 invalid:{el:'petIncorrect'},
                                 valid:{el:'petCorrect'}
                             }
+                        },
+                        age2:{
+                            validation:{
+                                optional:true,
+                                type:'integer',
+                                max:100,
+                                min:3
+                            },
+                            indicator:{el:'age2Incorrect'}
                         }
                     }
                 });
@@ -231,6 +238,20 @@
                                     <option value="truck">Truck</option>
                                     <option value="horse">Horse</option>
                                 </select>
+                            </div>
+                        </div>
+                        <div class="clearDiv"></div>
+                    </div>
+                    <div class="row">
+                        <div class="column1Backing"></div>
+                        <div class="column2Backing"></div>
+                        <div class="label">Age 2:</div>
+                        <div class="value">
+                            <div id="age2Incorrect" class="validator">
+                                <span class="validator">&nbsp;</span>
+                            </div>                            
+                            <div class="innerValue">
+                                <input id="age2" size="3" type="text" />
                             </div>
                         </div>
                         <div class="clearDiv"></div>
