--- a/src/form-validator/tests/manual/dynamicValidatorsExample.html
+++ b/src/form-validator/tests/manual/dynamicValidatorsExample.html
@@ -72,8 +72,16 @@
                                 valid:'correct',
                                 invalid:'incorrect'
                             }
+                        },
+                        age2:{
+                            validation:{
+                                type:'integer',
+                                max:100,
+                                min:3
+                            },
+                            indicator:'incorrect'
                         }
-                    }          
+                    }
                 });
                 //YAHOO.util.Event.on('clearButton','click',function(){form.clear()});
                 //YAHOO.util.Event.on('clearButton2','click',function(){form2.clear()});
@@ -132,6 +140,15 @@
                     </div>
                     <div id="incomeRange">
                         
+                    </div>
+                    <div class="row">
+                        <div class="column1Backing"></div>
+                        <div class="column2Backing"></div>
+                        <div class="label">Age 2:</div>
+                        <div class="value">
+                            <input id="age2" size="3" type="text" />
+                        </div>
+                        <div class="clearDiv"></div>
                     </div>
                     <div class="buttonRow">
                         <input type="submit" id="save" class="button" value="Save" />
