More commenting, also removed all traces of indicator and validator code from the main form validator object.  Also got rid of FormElement object

--- a/src/form-validator/tests/manual/basicExample.html
+++ b/src/form-validator/tests/manual/basicExample.html
@@ -95,8 +95,8 @@
                         vehicle:{
                             validation:function(el){return el.value !== 'none';},
                             indicators:{
-                                invalid:new YAHOO.widget.FieldIndicator('vehicle',{el:'vehicleIncorrect'}),
-                                valid:new YAHOO.widget.FieldIndicator('vehicle',{el:'vehicleCorrect'})
+                                invalid:new YAHOO.widget.FieldIndicator({el:'vehicleIncorrect'}),
+                                valid:new YAHOO.widget.FieldIndicator({el:'vehicleCorrect'})
                             }
                         },
                         pet:{
