Put yui-skin-sam on run tests body so the yui logger looks nice

--- a/src/form-validator/tests/runTests.html
+++ b/src/form-validator/tests/runTests.html
@@ -34,7 +34,7 @@
             });
         </script>
     </head>
-    <body xclass="yui-skin-sam" style="font-size:12pt;">
+    <body class="yui-skin-sam" style="font-size:12pt;">
         <div id="testLogger"></div>
     </body>
 </html>
