Got form groups working, along with formatters for inputs.  Test cases updated, as well as a couple of manual test cases/examples added

--- a/src/form-validator/tests/manual/dynamicValidatorsExample.html
+++ b/src/form-validator/tests/manual/dynamicValidatorsExample.html
@@ -26,12 +26,7 @@
                     html:'&nbsp;'
                 };
                 var form = new YAHOO.widget.FormValidator('basicExample1',{
-                    defaultSettings:{
-                        indicator:{
-                            className:'validator'
-                        }
-                    },
-                    inputs:{
+                    fields:{
                         firstName:{
                             validation:'text',
                             indicators:{
