--- a/src/form-validator/tests/manual/formatterExample.html
+++ b/src/form-validator/tests/manual/formatterExample.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Formatter Example</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="css/validatorCss.css" type="text/css" />
         <script type="text/javascript" src="http://yui.yahooapis.com/2.8.0r4/build/yahoo-dom-event/yahoo-dom-event.js"></script>
@@ -32,35 +32,17 @@
                                 valid:{el:'lastNameCorrect'}
                             }
                         },
-                        age:{
+                        phone:{
                             validation:{
-                                optional:true,
-                                type:'integer',
-                                max:100,
-                                min:3
+                                type:'phone',
+                                formatter: function (el) {
+                                    var rtVl = el.value.replace(eval('/[)(\\- ]/g'),'');
+                                    el.value = '(' + rtVl.substring(0,3) + ') ' + rtVl.substring(3,6) + '-' + rtVl.substring(6);
+                                }
                             },
                             indicators:{
-                                invalid:[
-                                    {el:'ageIncorrect'},
-                                    {
-                                        style:{tagType:'SPAN'},
-                                        formatter:function(fieldValidator,fieldIndicator,meta){
-                                            var el = fieldIndicator.get('element'),belowMin = meta.numberBelowMin, aboveMax = meta.numberAboveMax;
-                                            if (belowMin !== null && belowMin !== undefined){
-                                                el.innerHTML = 'must be >= ' + belowMin.min;
-                                                el.style.display = '';
-                                            }
-                                            else if (aboveMax !== null && aboveMax !== undefined){
-                                                el.innerHTML = 'must be <= ' + aboveMax.max;
-                                                el.style.display = '';
-                                            }
-                                            else{
-                                                el.style.display = 'none';
-                                            }
-                                        }
-                                    }
-                                ],
-                                valid:{el:'ageCorrect'}
+                                invalid:{el:'phone-incorrect'},
+                                valid:{el:'phone-correct'}
                             }
                         },
                         income:{
@@ -92,29 +74,6 @@
                                 ],
                                 valid:{el:'incomeCorrect'}
                             }
-                        },
-                        vehicle:{
-                            validation:function(el){return el.value !== 'none';},
-                            indicators:{
-                                invalid:new YAHOO.widget.FieldIndicator({el:'vehicleIncorrect'}),
-                                valid:new YAHOO.widget.FieldIndicator({el:'vehicleCorrect'})
-                            }
-                        },
-                        pet:{
-                            validation:'text',
-                            indicators:{
-                                invalid:{el:'petIncorrect'},
-                                valid:{el:'petCorrect'}
-                            }
-                        },
-                        age2:{
-                            validation:{
-                                optional:true,
-                                type:'integer',
-                                max:100,
-                                min:3
-                            },
-                            indicator:{el:'age2Incorrect'}
                         }
                     }
                 });
@@ -125,10 +84,11 @@
         <div class="mainContainer">
             <form id="basicExample" action="formPost.html">
                 <div class="formBody">
-                    <h2>Basic Example</h2>
+                    <h2>Formatters</h2>
                     <div class="info">
-                        A very simple example where you register which divs are your validators
-                        and indicators.
+                        An example that shows how you can use formatting on the validation
+                        to ensure a specific format for the input.  In this example, the
+                        form validator will ensure that phone has a format of (xxx) xxx-xxxx.
                     </div>
                     <div class="row">
                         <div class="column1Backing"></div>
@@ -158,16 +118,16 @@
                     <div class="row">
                         <div class="column1Backing"></div>
                         <div class="column2Backing"></div>
-                        <div class="label">Age:</div>
+                        <div class="label">Phone:</div>
                         <div class="value">
-                            <div id="ageIncorrect" class="validator">
+                            <div id="phone-incorrect" class="validator">
                                 <span class="validator">&nbsp;</span>
                             </div>
-                            <div id="ageCorrect" class="indicator" style="display:none;">
+                            <div id="phone-correct" class="indicator" style="display:none;">
                                 <span class="indicator">&nbsp;</span>
                             </div>
                             <div class="innerValue">
-                                <input id="age" size="3" type="text" />
+                                <input id="phone" type="text" />
                             </div>
                         </div>
                         <div class="label">Income ($):</div>
@@ -186,60 +146,6 @@
                     </div>
                     <div id="incomeRange">
 
-                    </div>
-                    <div class="row">
-                        <div class="column1Backing"></div>
-                        <div class="column2Backing"></div>
-                        <div class="label">Pet:</div>
-                        <div class="value">
-                            <div id="petIncorrect" class="validator">
-                                <span class="validator">&nbsp;</span>
-                            </div>
-                            <div id="petCorrect" class="indicator" style="display:none;">
-                                <span class="indicator">&nbsp;</span>
-                            </div>
-                            <div class="innerValue">
-                                <select id="pet">
-                                    <option value="">-- Select a option --</option>
-                                    <option value="None">No Pet</option>
-                                    <option value="Dog">Dog</option>
-                                    <option value="Cat">Cat</option>
-                                    <option value="Bird">Bird</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="label">Vehicle:</div>
-                        <div class="value">
-                            <div id="vehicleIncorrect" class="validator">
-                                <span class="validator">&nbsp;</span>
-                            </div>
-                            <div id="vehicleCorrect" class="indicator" style="display:none;">
-                                <span class="indicator">&nbsp;</span>
-                            </div>
-                            <div class="innerValue">
-                                <select id="vehicle">
-                                    <option value="none">-- Select a option --</option>
-                                    <option value="car">Car</option>
-                                    <option value="truck">Truck</option>
-                                    <option value="horse">Horse</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="clearDiv"></div>
-                    </div>
-                    <div class="row">
-                        <div class="column1Backing"></div>
-                        <div class="column2Backing"></div>
-                        <div class="label">Age 2:</div>
-                        <div class="value">
-                            <div id="age2Incorrect" class="validator">
-                                <span class="validator">&nbsp;</span>
-                            </div>                            
-                            <div class="innerValue">
-                                <input id="age2" size="3" type="text" />
-                            </div>
-                        </div>
-                        <div class="clearDiv"></div>
                     </div>
                     <div class="buttonRow">
                         <input type="submit" class="button" value="Save" />
