Made some more code fixes based on Lukes suggestions.  A few more changes to be hashed out still

--- a/src/form-validator/tests/manual/groupsExample.html
+++ b/src/form-validator/tests/manual/groupsExample.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="http://yui.yahooapis.com/2.8.0r4/build/event-delegate/event-delegate-min.js"></script>
 
         <script type="text/javascript" src="../../js/form-validator.js"></script>
-        <script type="text/javascript" src="../../js/form-group.js"></script>
+        <script type="text/javascript" src="../../js/field-group.js"></script>
         <script type="text/javascript" src="../../js/form-button.js"></script>
         <script type="text/javascript" src="../../js/field-validator.js"></script>
         <script type="text/javascript" src="../../js/field-indicator.js"></script>
