--- a/src/form-validator/tests/runTests.html
+++ b/src/form-validator/tests/runTests.html
@@ -19,10 +19,10 @@
         <script type="text/javascript" src="field-indicator-test.js"></script>
         <script type="text/javascript" src="field-validator-test.js"></script>
         <script type="text/javascript" src="form-validator-test.js"></script>
-        <script type="text/javascript" src="form-group-test.js"></script>
+        <script type="text/javascript" src="field-group-test.js"></script>
 
         <script type="text/javascript" src="../js/form-validator.js"></script>
-        <script type="text/javascript" src="../js/form-group.js"></script>
+        <script type="text/javascript" src="../js/field-group.js"></script>
         <script type="text/javascript" src="../js/form-button.js"></script>
         <script type="text/javascript" src="../js/field-indicator.js"></script>
         <script type="text/javascript" src="../js/field-validator.js"></script>
@@ -37,7 +37,7 @@
                 YAHOO.tool.TestRunner.add(YW.formValidatorTests.fieldIndicatorTestCase);
                 YAHOO.tool.TestRunner.add(YW.formValidatorTests.fieldValidatorTestCase);
                 YAHOO.tool.TestRunner.add(YW.formValidatorTests.formValidatorTestCase);
-                YAHOO.tool.TestRunner.add(YW.formValidatorTests.formGroupTestCase);
+                YAHOO.tool.TestRunner.add(YW.formValidatorTests.fieldGroupTestCase);
                 //run the tests
                 YAHOO.util.Event.on('runTestsButton','click',function(){
                     YAHOO.tool.TestRunner.run();
