Some more fixes based on conversation with luke.  Got rid of form-button, cleaned up the default styling for indicators as well

--- a/src/form-validator/tests/manual/basicExample.html
+++ b/src/form-validator/tests/manual/basicExample.html
@@ -10,7 +10,6 @@
 
 
         <script type="text/javascript" src="../../js/form-validator.js"></script>
-        <script type="text/javascript" src="../../js/form-button.js"></script>
         <script type="text/javascript" src="../../js/field-validator.js"></script>
         <script type="text/javascript" src="../../js/field-indicator.js"></script>
         <script type="text/javascript">
@@ -43,7 +42,7 @@
                                 invalid:[
                                     {el:'ageIncorrect'},
                                     {
-                                        style:{tagType:'SPAN'},
+                                        html:'<SPAN></SPAN>',
                                         formatter:function(fieldValidator,fieldIndicator,meta){
                                             var el = fieldIndicator.get('element'),belowMin = meta.numberBelowMin, aboveMax = meta.numberAboveMax;
                                             if (belowMin !== null && belowMin !== undefined){
