--- a/recent/tests/manual/index.html
+++ b/recent/tests/manual/index.html
@@ -6,10 +6,19 @@
   </head>
   <body>
       <ul>
-          <li><a href="basicExample.html">basicExample</a></li>
+          <li><a href="../runTests.html">Run automated tests</a></li>
+          <li><a href="basicExample.html">Basic Example</a></li>
           <li><a href="dynamicValidatorsExample.html">Dynamic Indicators</a></li>
           <li><a href="groupsExample.html">Groups Example</a></li>
+          <li><a href="ajaxExample.html">AJAX Form Post Example</a></li>
+          <li><a href="checkOnSubmitExample.html">Update indicators on submit Example</a></li>
+          <li><a href="checkboxExample.html">Checkbox Example</a></li>
+          <li><a href="checkboxGroupExample.html">Checkbox group Example</a></li>
           <li><a href="formatterExample.html">Formatter Example</a></li>
+          <li><a href="onOffDisableEnableExample.html">Turn fields on/off and enable/disable Example</a></li>
+          <li><a href="optionalExample.html">Optional Field example</a></li>
+          <li><a href="regexExample.html">Regular Expression validation example</a></li>
+          <li><a href="turnGroupsOnOffExample.html">Turn group on/off Example</a></li>
       </ul>
   </body>
 </html>
