--- a/src/form-validator/tests/manual/basicExample.html
+++ b/src/form-validator/tests/manual/basicExample.html
@@ -16,6 +16,7 @@
             var validator = YAHOO.widget;
             window.onload = function() {
                 var form = new YAHOO.widget.FormValidator('basicExample',{
+                    usedelay: true,
                     fields:{
                         firstName:{
                             validation:'text',
