--- a/src/form-validator/tests/manual/turnGroupsOnOffExample.html
+++ b/src/form-validator/tests/manual/turnGroupsOnOffExample.html
@@ -74,7 +74,7 @@
                         }
                     }
                 });
-                var field = form.getById('username-email');
+                var field = form.getField('username-email');
                 YAHOO.util.Event.addListener('turnOnButton','click',function(){field.turnOn()});
                 YAHOO.util.Event.addListener('turnOffButton','click',function(){field.turnOff()});
             }
