--- a/src/form-validator/tests/manual/dynamicValidatorsExample.html
+++ b/src/form-validator/tests/manual/dynamicValidatorsExample.html
@@ -56,7 +56,26 @@
                             },
                             indicators:{
                                 valid:'correct',
-                                invalid:'incorrect'
+                                invalid:[
+                                    'incorrect',
+                                    {
+                                        html:'<DIV style="position: absolute;z-index:3;top:10px;left:65px;"></DIV>',
+                                        formatter:function(fieldValidator,fieldIndicator,meta){
+                                            var el = fieldIndicator.get('element'),belowMin = meta.numberBelowMin, aboveMax = meta.numberAboveMax;
+                                            if (belowMin !== null && belowMin !== undefined){
+                                                el.innerHTML = 'must be >= ' + belowMin.min;
+                                                el.style.display = '';
+                                            }
+                                            else if (aboveMax !== null && aboveMax !== undefined){
+                                                el.innerHTML = 'must be <= ' + aboveMax.max;
+                                                el.style.display = '';
+                                            }
+                                            else{
+                                                el.style.display = 'none';
+                                            }
+                                        }
+                                    }
+                                ]
                             }
                         },
                         income:{
@@ -68,16 +87,27 @@
                             },
                             indicators:{
                                 valid:'correct',
-                                invalid:'incorrect'
+                                invalid:[
+                                    'incorrect',
+                                    {
+                                        el:'incomeRange',
+                                        formatter:function(fieldValidator,fieldIndicator,meta){
+                                            var el = fieldIndicator.get('element'),belowMin = meta.numberBelowMin, aboveMax = meta.numberAboveMax;
+                                            if (belowMin !== null && belowMin !== undefined){
+                                                el.innerHTML = 'Income must be greater than or equal to ' + belowMin.min;
+                                                el.style.display = '';
+                                            }
+                                            else if (aboveMax !== null && aboveMax !== undefined){
+                                                el.innerHTML = 'Income must be less than or equal to ' + aboveMax.max;
+                                                el.style.display = '';
+                                            }
+                                            else{
+                                                el.style.display = 'none';
+                                            }
+                                        }
+                                    }
+                                ]
                             }
-                        },
-                        age2:{
-                            validation:{
-                                type:'integer',
-                                max:100,
-                                min:3
-                            },
-                            indicator:'incorrect'
                         }
                     }
                 });
@@ -128,7 +158,7 @@
                         <div class="column2Backing"></div>
                         <div class="label">Age:</div>
                         <div class="value">
-                            <input id="age" type="text" />
+                            <input id="age" style="width: 50px;" type="text" />
                         </div>
                         <div class="label">Income ($):</div>
                         <div class="value">
@@ -138,15 +168,6 @@
                     </div>
                     <div id="incomeRange">
 
-                    </div>
-                    <div class="row">
-                        <div class="column1Backing"></div>
-                        <div class="column2Backing"></div>
-                        <div class="label">Age 2:</div>
-                        <div class="value">
-                            <input id="age2" size="3" type="text" />
-                        </div>
-                        <div class="clearDiv"></div>
                     </div>
                     <div class="buttonRow">
                         <input type="submit" id="save" class="button" value="Save" />
